--- a/RigaDevDay/RigaDevDay/Base.lproj/Main.storyboard
+++ b/RigaDevDay/RigaDevDay/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="14F1605" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="cp2-fC-y6q">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="cp2-fC-y6q">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -354,7 +354,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OpW-WO-osv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-621" y="-2228"/>
+            <point key="canvasLocation" x="-532" y="-2024"/>
         </scene>
         <!--Event View Controller-->
         <scene sceneID="kcd-3p-KzB">
@@ -1080,7 +1080,39 @@
                     <view key="view" contentMode="scaleToFill" id="Egh-9B-rw4">
                         <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="DdG-wE-543">
+                                <rect key="frame" x="281" y="250" width="37" height="37"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="37" id="JnK-zA-8q7"/>
+                                    <constraint firstAttribute="width" constant="37" id="kbG-8i-Eln"/>
+                                </constraints>
+                                <color key="color" red="0.25882352939999997" green="0.59999999999999998" blue="0.99215686270000003" alpha="1" colorSpace="calibratedRGB"/>
+                            </activityIndicatorView>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Ba-EG-crJ">
+                                <rect key="frame" x="193" y="246" width="214" height="44"/>
+                                <color key="backgroundColor" red="0.10196078431372549" green="0.10588235294117647" blue="0.12941176470588237" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="UMh-Kl-EdO"/>
+                                    <constraint firstAttribute="width" constant="214" id="hrD-TR-L9h"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                <state key="normal" title="Retry loading schedule">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="retryButtonTapped:" destination="fsD-LD-ur5" eventType="touchUpInside" id="4W1-Hp-lBu"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="8Ba-EG-crJ" firstAttribute="centerX" secondItem="Egh-9B-rw4" secondAttribute="centerX" id="4cO-fu-9PV"/>
+                            <constraint firstItem="DdG-wE-543" firstAttribute="centerY" secondItem="Egh-9B-rw4" secondAttribute="centerY" id="cFg-VU-sMd"/>
+                            <constraint firstItem="8Ba-EG-crJ" firstAttribute="centerY" secondItem="Egh-9B-rw4" secondAttribute="centerY" id="rr6-yi-jCj"/>
+                            <constraint firstItem="DdG-wE-543" firstAttribute="centerX" secondItem="Egh-9B-rw4" secondAttribute="centerX" id="rve-qh-W2q"/>
+                        </constraints>
                     </view>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="UIx-4C-UXW">
@@ -1097,7 +1129,9 @@
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
                     <connections>
                         <outlet property="buttonMenu" destination="1GG-Kk-ed4" id="r8p-1T-EVj"/>
+                        <outlet property="iboActivityIndicator" destination="DdG-wE-543" id="dLk-je-65o"/>
                         <outlet property="iboDayBarButtonItem" destination="wPV-Mj-ydp" id="MPW-84-0In"/>
+                        <outlet property="iboRetryButton" destination="8Ba-EG-crJ" id="3gN-Ic-uDi"/>
                         <segue destination="crc-Ix-PpT" kind="show" identifier="EventSegue" id="Q8x-rX-DXG"/>
                     </connections>
                 </viewController>
@@ -1417,8 +1451,8 @@
         <image name="twitter-menu.png" width="54" height="44"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="miU-PP-23E"/>
-        <segue reference="Q8x-rX-DXG"/>
         <segue reference="WJ5-Q1-sZF"/>
+        <segue reference="Q8x-rX-DXG"/>
+        <segue reference="aTD-GC-86D"/>
     </inferredMetricsTieBreakers>
 </document>
