--- a/RigaDevDay/RigaDevDay/Base.lproj/Main.storyboard
+++ b/RigaDevDay/RigaDevDay/Base.lproj/Main.storyboard
@@ -494,10 +494,10 @@
                         <viewControllerLayoutGuide type="bottom" id="F9J-29-u3A"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8Hk-uV-9WA">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dMx-8G-JvH">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dMx-8G-JvH">
                                 <rect key="frame" x="0.0" y="20" width="600" height="580"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="backstage_1.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="fHW-2C-ehp">
@@ -612,10 +612,10 @@
                         <viewControllerLayoutGuide type="bottom" id="4gT-3J-DN2"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="BdG-gL-MRa">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="u10-Xh-Ji7">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="u10-Xh-Ji7">
                                 <rect key="frame" x="0.0" y="20" width="600" height="580"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Job Title at Company long lonng text long lonng text long lonng text long lonng text" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="owE-hR-E8a">
@@ -1242,7 +1242,6 @@
                         <outlet property="iboActivityIndicator" destination="DdG-wE-543" id="dLk-je-65o"/>
                         <outlet property="iboDayBarButtonItem" destination="wPV-Mj-ydp" id="MPW-84-0In"/>
                         <outlet property="iboRetryButton" destination="8Ba-EG-crJ" id="3gN-Ic-uDi"/>
-                        <segue destination="crc-Ix-PpT" kind="show" identifier="EventSegue" id="Q8x-rX-DXG"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qm4-Fg-gtb" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1524,6 +1523,7 @@
                         <outlet property="iboActivityIndicator" destination="AYt-BM-ALp" id="4AW-gL-tRV"/>
                         <outlet property="iboDayBarButtonItem" destination="pbn-21-YsF" id="PIj-JM-hK1"/>
                         <outlet property="iboRetryButton" destination="Xnv-Ct-0km" id="aaP-yA-8CM"/>
+                        <segue destination="crc-Ix-PpT" kind="show" identifier="EventSegue" id="WTX-0H-ES5"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qi6-US-2Fd" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1548,8 +1548,8 @@
         <image name="speaker_0.png" width="126" height="138"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Q8x-rX-DXG"/>
-        <segue reference="miU-PP-23E"/>
         <segue reference="WJ5-Q1-sZF"/>
+        <segue reference="WTX-0H-ES5"/>
+        <segue reference="miU-PP-23E"/>
     </inferredMetricsTieBreakers>
 </document>
