--- a/RigaDevDay/RigaDevDay/Base.lproj/Main.storyboard
+++ b/RigaDevDay/RigaDevDay/Base.lproj/Main.storyboard
@@ -494,11 +494,11 @@
                         <viewControllerLayoutGuide type="bottom" id="F9J-29-u3A"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8Hk-uV-9WA">
-                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dMx-8G-JvH">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="backstage_1.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="fHW-2C-ehp">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="167"/>
@@ -506,7 +506,7 @@
                                             <constraint firstAttribute="height" constant="167" id="IKP-Wt-Dfz"/>
                                         </constraints>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time and location" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="FIw-wv-7Ek">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time and location" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" preferredMaxLayoutWidth="574" translatesAutoresizingMaskIntoConstraints="NO" id="FIw-wv-7Ek">
                                         <rect key="frame" x="13" y="28" width="574" height="21"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="21" id="5sr-Rr-axE"/>
@@ -515,7 +515,7 @@
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Speech Title Speech Title Speech Title Speech Title Speech Title Speech Title Speech Title" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="1" translatesAutoresizingMaskIntoConstraints="NO" id="6dR-7J-2EM">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Speech Title Speech Title Speech Title Speech Title Speech Title Speech Title Speech Title" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" minimumScaleFactor="1" preferredMaxLayoutWidth="574" translatesAutoresizingMaskIntoConstraints="NO" id="6dR-7J-2EM">
                                         <rect key="frame" x="13" y="77" width="574" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="egc-B6-rVS"/>
@@ -580,7 +580,7 @@
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="6dR-7J-2EM" firstAttribute="top" secondItem="FIw-wv-7Ek" secondAttribute="bottom" constant="28" id="2NS-Vv-4Uw"/>
-                                    <constraint firstAttribute="bottom" secondItem="iDg-5h-ZZe" secondAttribute="bottom" constant="8" id="3yd-1S-wu4"/>
+                                    <constraint firstAttribute="bottom" secondItem="iDg-5h-ZZe" secondAttribute="bottom" constant="72" id="3yd-1S-wu4"/>
                                     <constraint firstItem="iDg-5h-ZZe" firstAttribute="top" secondItem="D5S-7A-pjY" secondAttribute="bottom" constant="13" id="4BR-MC-y4L"/>
                                     <constraint firstAttribute="trailing" secondItem="fHW-2C-ehp" secondAttribute="trailing" id="5DC-Uf-RH8"/>
                                     <constraint firstItem="iDg-5h-ZZe" firstAttribute="top" secondItem="ezI-pb-QCO" secondAttribute="bottom" constant="19" id="5DD-0X-5QR"/>
@@ -621,7 +621,7 @@
                         <constraints>
                             <constraint firstItem="dMx-8G-JvH" firstAttribute="bottom" secondItem="F9J-29-u3A" secondAttribute="top" id="0KF-Ed-LX7"/>
                             <constraint firstItem="dMx-8G-JvH" firstAttribute="leading" secondItem="8Hk-uV-9WA" secondAttribute="leading" id="jfn-aw-Ow7"/>
-                            <constraint firstItem="dMx-8G-JvH" firstAttribute="top" secondItem="YAI-Ve-shv" secondAttribute="bottom" id="kpR-9M-pWo"/>
+                            <constraint firstItem="dMx-8G-JvH" firstAttribute="top" secondItem="YAI-Ve-shv" secondAttribute="bottom" constant="-20" id="kpR-9M-pWo"/>
                             <constraint firstAttribute="trailing" secondItem="dMx-8G-JvH" secondAttribute="trailing" id="r8I-th-Ok1"/>
                         </constraints>
                     </view>
@@ -652,13 +652,13 @@
                         <viewControllerLayoutGuide type="bottom" id="4gT-3J-DN2"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="BdG-gL-MRa">
-                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="u10-Xh-Ji7">
-                                <rect key="frame" x="0.0" y="-20" width="600" height="556"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Job Title at Company long lonng text long lonng text long lonng text long lonng text" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="owE-hR-E8a">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Job Title at Company long lonng text long lonng text long lonng text long lonng text" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="579" translatesAutoresizingMaskIntoConstraints="NO" id="owE-hR-E8a">
                                         <rect key="frame" x="10" y="358" width="579" height="44"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="44" id="SCn-pH-7nE"/>
@@ -1056,7 +1056,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="79"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Presentation SubTitle" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.80000000000000027" translatesAutoresizingMaskIntoConstraints="NO" id="JAq-7K-VVs">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Presentation SubTitle" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="1" translatesAutoresizingMaskIntoConstraints="NO" id="JAq-7K-VVs">
                                                     <rect key="frame" x="18" y="30" width="507" height="17"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="17" id="lPb-cp-Xpo"/>
@@ -1504,7 +1504,7 @@
         <!--Room Page View Controller-->
         <scene sceneID="6oG-JA-l4m">
             <objects>
-                <viewController id="hDr-fg-v85" customClass="RoomPageViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="RoomPageVC" id="hDr-fg-v85" customClass="RoomPageViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="xsS-oZ-oFM"/>
                         <viewControllerLayoutGuide type="bottom" id="Rav-va-4PL"/>
@@ -1589,7 +1589,7 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="WJ5-Q1-sZF"/>
-        <segue reference="LGa-vG-AbV"/>
+        <segue reference="gb7-sd-ro1"/>
         <segue reference="miU-PP-23E"/>
     </inferredMetricsTieBreakers>
 </document>
