--- a/RigaDevDay/RigaDevDay/Base.lproj/Main.storyboard
+++ b/RigaDevDay/RigaDevDay/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="cp2-fC-y6q">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="14F1605" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="cp2-fC-y6q">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -494,11 +494,11 @@
                         <viewControllerLayoutGuide type="bottom" id="F9J-29-u3A"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8Hk-uV-9WA">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dMx-8G-JvH">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <rect key="frame" x="0.0" y="-20" width="600" height="556"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="backstage_1.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="fHW-2C-ehp">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="167"/>
@@ -652,11 +652,11 @@
                         <viewControllerLayoutGuide type="bottom" id="4gT-3J-DN2"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="BdG-gL-MRa">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="u10-Xh-Ji7">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <rect key="frame" x="0.0" y="-20" width="600" height="556"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Job Title at Company long lonng text long lonng text long lonng text long lonng text" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="579" translatesAutoresizingMaskIntoConstraints="NO" id="owE-hR-E8a">
                                         <rect key="frame" x="10" y="358" width="579" height="44"/>
@@ -664,7 +664,7 @@
                                             <constraint firstAttribute="height" constant="44" id="SCn-pH-7nE"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
-                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="7n8-nA-KlJ">
@@ -887,7 +887,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="th0-0Y-pGf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1894" y="980"/>
+            <point key="canvasLocation" x="-1734" y="532"/>
         </scene>
         <!--Navigation View Controller-->
         <scene sceneID="cwo-g1-Y0f">
@@ -1271,6 +1271,9 @@
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Day" id="wPV-Mj-ydp">
                             <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            <connections>
+                                <segue destination="4vv-q5-RZ4" kind="presentation" identifier="DaysSegue" id="O4K-2c-Dty"/>
+                            </connections>
                         </barButtonItem>
                     </navigationItem>
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
@@ -1284,7 +1287,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qm4-Fg-gtb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2160" y="115"/>
+            <point key="canvasLocation" x="-1734" y="-191"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="GXv-bx-O3d">
@@ -1303,7 +1306,7 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="fsD-LD-ur5" kind="relationship" relationship="rootViewController" id="QIn-2V-e9F"/>
+                        <segue destination="fsD-LD-ur5" kind="relationship" relationship="rootViewController" id="s0K-Lf-I2I"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8df-1S-2GS" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1501,75 +1504,6 @@
             </objects>
             <point key="canvasLocation" x="-2188" y="-3495"/>
         </scene>
-        <!--Room Page View Controller-->
-        <scene sceneID="6oG-JA-l4m">
-            <objects>
-                <viewController storyboardIdentifier="RoomPageVC" id="hDr-fg-v85" customClass="RoomPageViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="xsS-oZ-oFM"/>
-                        <viewControllerLayoutGuide type="bottom" id="Rav-va-4PL"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="Tze-TL-seQ">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="AYt-BM-ALp">
-                                <rect key="frame" x="281" y="282" width="37" height="37"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="37" id="b6Z-5F-iP5"/>
-                                    <constraint firstAttribute="width" constant="37" id="iIu-xJ-ggj"/>
-                                </constraints>
-                                <color key="color" red="0.25882352939999997" green="0.59999999999999998" blue="0.99215686270000003" alpha="1" colorSpace="calibratedRGB"/>
-                            </activityIndicatorView>
-                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xnv-Ct-0km">
-                                <rect key="frame" x="193" y="278" width="214" height="44"/>
-                                <color key="backgroundColor" red="0.1019607843" green="0.1058823529" blue="0.12941176469999999" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="44" id="Hjs-sg-7ER"/>
-                                    <constraint firstAttribute="width" constant="214" id="VBr-E7-2Tc"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
-                                <state key="normal" title="Retry loading schedule">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="retryButtonTapped:" destination="hDr-fg-v85" eventType="touchUpInside" id="KuR-Rd-dih"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="Xnv-Ct-0km" firstAttribute="centerX" secondItem="Tze-TL-seQ" secondAttribute="centerX" id="700-fq-tcA"/>
-                            <constraint firstItem="AYt-BM-ALp" firstAttribute="centerY" secondItem="Tze-TL-seQ" secondAttribute="centerY" id="MD1-P9-xSj"/>
-                            <constraint firstItem="Xnv-Ct-0km" firstAttribute="centerY" secondItem="Tze-TL-seQ" secondAttribute="centerY" id="Mwu-Ry-lwr"/>
-                            <constraint firstItem="AYt-BM-ALp" firstAttribute="centerX" secondItem="Tze-TL-seQ" secondAttribute="centerX" id="ezH-89-dVN"/>
-                        </constraints>
-                    </view>
-                    <toolbarItems/>
-                    <navigationItem key="navigationItem" id="hLO-SY-Idi">
-                        <barButtonItem key="leftBarButtonItem" image="ic_drawer.png" id="NRY-ZG-KFw">
-                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" title="Day" id="pbn-21-YsF">
-                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                            <connections>
-                                <segue destination="4vv-q5-RZ4" kind="presentation" identifier="DaysSegue" id="xgM-yY-KRa"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
-                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
-                    <connections>
-                        <outlet property="buttonMenu" destination="NRY-ZG-KFw" id="gdf-sY-F04"/>
-                        <outlet property="iboActivityIndicator" destination="AYt-BM-ALp" id="4AW-gL-tRV"/>
-                        <outlet property="iboDayBarButtonItem" destination="pbn-21-YsF" id="PIj-JM-hK1"/>
-                        <outlet property="iboRetryButton" destination="Xnv-Ct-0km" id="aaP-yA-8CM"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Qi6-US-2Fd" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-2160" y="115"/>
-        </scene>
     </scenes>
     <resources>
         <image name="backstage_1.jpeg" width="470" height="328"/>
@@ -1588,8 +1522,8 @@
         <image name="speaker_0.png" width="126" height="138"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="WJ5-Q1-sZF"/>
-        <segue reference="gb7-sd-ro1"/>
+        <segue reference="LGa-vG-AbV"/>
         <segue reference="miU-PP-23E"/>
+        <segue reference="WJ5-Q1-sZF"/>
     </inferredMetricsTieBreakers>
 </document>
